crates/config/tests/snapshots/block_string_gen_literal_i2_clip_tab_content_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-i2-clip-tab-content-dedent

## Input

```mical
key |2
  x	y
  	z
end marker

```

## JSON

```json
{
  "key": "x\ty\n\tz\n",
  "end": "marker"
}
```

vim:ft=markdown
