crates/config/tests/snapshots/block_string_gen_literal_i2_clip_trailing_empty_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-i2-clip-trailing-empty-dedent

## Input

```mical
key |2
  a


end marker

```

## JSON

```json
{
  "key": "a\n",
  "end": "marker"
}
```

vim:ft=markdown
