crates/config/tests/snapshots/block_string_gen_literal_keep_extra_indent_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-keep-extra-indent-dedent

## Input

```mical
key |+
  a
    b
  c
end marker

```

## JSON

```json
{
  "key": "a\n  b\nc\n",
  "end": "marker"
}
```

vim:ft=markdown
